# OpenManus-Lite

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  main.py  memory.db  pyproject.toml  requirements-bot.txt  requirements.txt  tests_offline.py
LICENSES/: LICENSE.apache-2.0  LICENSE.bsd-3-clause  LICENSE.gpl-3.0
app/: __init__.py  config.py  exceptions.py  llm.py  logger.py  schema.py  setup.py  store.py
app/agent/: base.py  manus.py  multi.py  react.py  toolcall.py
app/prompt/: __init__.py  manus.py  supervisor.py  toolcall.py
app/tool/: __init__.py  ask_human.py  base.py  bash.py  browser.py  create_chat_completion.py  python_execute.py  str_replace_editor.py  terminate.py  tool_collection.py  webfetch.py
bot/: README.md  run_bot.py
config/: config.example.toml
scripts/: make_demo_gif.py
